<resources>
    <string name="app_name">Contact Manager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_contact">Edit Contact</string>
    <string name="action_addContact">Add Contact</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_edit">Edit</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="birthday_label">Birthday</string>
    <string name="home_phone_label">Home Phone</string>
    <string name="mobile_phone_label">Mobile Phone</string>
    <string name="work_phone_label">Work Phone</string>
    <string name="email_label">Email Address</string>
    <string name="title_activity_view_contact">View Contact</string>
    <string name="birthday_button_label">Birthday</string>
</resources>
